@@ -1,8 +1,8 @@
 # Build stage
-FROM maven:3.9.10-eclipse-temurin-24 AS build
+FROM maven:3.9.10-amazoncorretto-24-alpine AS build
 
 # Создаём пользователя для безопасности
-RUN useradd -m myuser && \
+RUN adduser -D myuser && \
     mkdir -p /usr/src/app && \
     chown myuser:myuser /usr/src/app
 
@@ -16,13 +16,13 @@ COPY --chown=myuser:myuser . .
 RUN mvn clean package -DskipTests --settings settings.xml
 
 # Run stage
-FROM openjdk:24
+FROM amazoncorretto:24-alpine3.21-jdk
 
 # Копируем собранный JAR и frontend
 COPY --from=build /usr/src/app/solo-leveling-notification-service/target/*.jar /app/solo-leveling-notification.jar
 
 # Безопасность: создаём пользователя
-RUN useradd -m myuser && \
+RUN adduser -D myuser && \
     mkdir -p /app && \
     chown myuser:myuser /app
 
@@ -33,4 +33,8 @@ WORKDIR /app
 EXPOSE 8080
 
 # Запускаем приложение
-CMD ["java", "-jar", "solo-leveling-notification.jar"]
+CMD ["java", \
+    "--enable-native-access=ALL-UNNAMED", \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+     "-Dspring.profiles.active=prod", \
+    "-jar", "solo-leveling-notification.jar"]
